# Paideia2020Hackathon

./: CMakeLists.txt  PuzzleGen.py  README.md  a.out  builder.cc  gen  gen.py  logical_solver_pseudo.txt  solv.py  sudoko_functions.cpp
soduku/: Cargo.toml
soduku/src/: main.rs
